[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/sleeper/sleeper.gd" type="Script" id=1]

[node name="sleeper" type="VisibilityEnabler2D"]
process_parent = true
physics_process_parent = true
script = ExtResource( 1 )

[node name="sleep_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="screen_entered" from="." to="." method="_on_sleeper_screen_entered"]
[connection signal="screen_exited" from="." to="." method="_on_sleeper_screen_exited"]
[connection signal="tree_entered" from="." to="." method="_on_sleeper_tree_entered"]
[connection signal="timeout" from="sleep_timer" to="." method="_on_sleep_timer_timeout"]
